fix: correct quadrants spacing

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ header{background: #2d4a22;
 #quadrants {
     display: flex;
     justify-content: space-between;
-    width: 90%;  
+    width: min(90%, 1000px);
     gap: 1em;
 }
 
@@ -140,5 +140,9 @@ footer{
     }
     #quadrants {
         flex-direction: column;
+    }
+
+    #quadrants div {
+        border: none;
     }
 }
